Move to Gradle and Kotlin