@@ -1,17 +1,17 @@
 /**
- *   Copyright (C) 2011-2012 Typesafe Inc. <http://typesafe.com>
+ * Copyright (C) 2011-2012 Typesafe Inc. <http://typesafe.com>
  */
 package com.typesafe.config.impl;
-
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
 
 import com.typesafe.config.ConfigException;
 import com.typesafe.config.ConfigOrigin;
 import com.typesafe.config.ConfigRenderOptions;
 import com.typesafe.config.ConfigValueType;
+
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 
 /**
  * The issue here is that we want to first merge our stack of config files, and
@@ -41,36 +41,14 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
         }
     }
 
-    @Override
-    public ConfigValueType valueType() {
-        throw new ConfigException.NotResolved(
-                "called valueType() on value with unresolved substitutions, need to Config#resolve() first, see API docs");
-    }
-
-    @Override
-    public Object unwrapped() {
-        throw new ConfigException.NotResolved(
-                "called unwrapped() on value with unresolved substitutions, need to Config#resolve() first, see API docs");
-    }
-
-    @Override
-    ResolveResult<? extends AbstractConfigValue> resolveSubstitutions(ResolveContext context, ResolveSource source)
-            throws NotPossibleToResolve {
-        SimpleConfigList nonRecursiveList = tryResolveSubstitutionsNonRecursiveOptimisticConfigList(stack, origin());
-        if (nonRecursiveList != null) {
-            return ResolveResult.make(context, nonRecursiveList);
-        }
-        return resolveSubstitutions(this, stack, context, source);
-    }
-
     /**
      * Optimize loading of large configs with many += array builders:
      * 1. Parsing time in one case down from 14sec to 40ms...
      * 2. non-recursive - no StackOverflowError
-     * */
+     */
     static SimpleConfigList tryResolveSubstitutionsNonRecursiveOptimisticConfigList(
-        List<AbstractConfigValue> stack,
-        ConfigOrigin origin
+            List<AbstractConfigValue> stack,
+            ConfigOrigin origin
     ) {
         Object prevRef = null;
         SimpleConfigList acc = null;
@@ -101,8 +79,8 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
 
     // static method also used by ConfigDelayedMergeObject
     static ResolveResult<? extends AbstractConfigValue> resolveSubstitutions(ReplaceableMergeStack replaceable,
-            List<AbstractConfigValue> stack,
-            ResolveContext context, ResolveSource source) throws NotPossibleToResolve {
+                                                                             List<AbstractConfigValue> stack,
+                                                                             ResolveContext context, ResolveSource source) throws NotPossibleToResolve {
         if (ConfigImpl.traceSubstitutionsEnabled()) {
             ConfigImpl.trace(context.depth(), "delayed merge stack has " + stack.size() + " items:");
             int count = 0;
@@ -170,8 +148,8 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
                 ConfigImpl.trace(newContext.depth(), "Resolving highest-priority item in delayed merge " + end
                         + " against " + sourceForEnd + " endWasRemoved=" + (source != sourceForEnd));
             ResolveResult<? extends AbstractConfigValue> result = newContext.resolve(end, sourceForEnd);
-            AbstractConfigValue resolvedEnd = result.value;
-            newContext = result.context;
+            AbstractConfigValue resolvedEnd = result.value();
+            newContext = result.context();
 
             if (resolvedEnd != null) {
                 if (merged == null) {
@@ -190,11 +168,6 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
         }
 
         return ResolveResult.make(newContext, merged);
-    }
-
-    @Override
-    public AbstractConfigValue makeReplacement(ResolveContext context, int skipping) {
-        return ConfigDelayedMerge.makeReplacement(context, stack, skipping);
     }
 
     // static method also used by ConfigDelayedMergeObject; end may be null
@@ -218,109 +191,18 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
         }
     }
 
-    @Override
-    ResolveStatus resolveStatus() {
-        return ResolveStatus.UNRESOLVED;
-    }
-
-    @Override
-    public AbstractConfigValue replaceChild(AbstractConfigValue child, AbstractConfigValue replacement) {
-        List<AbstractConfigValue> newStack = replaceChildInList(stack, child, replacement);
-        if (newStack == null)
-            return null;
-        else
-            return new ConfigDelayedMerge(origin(), newStack);
-    }
-
-    @Override
-    public boolean hasDescendant(AbstractConfigValue descendant) {
-        return hasDescendantInList(stack, descendant);
-    }
-
-    @Override
-    ConfigDelayedMerge relativized(Path prefix) {
-        List<AbstractConfigValue> newStack = new ArrayList<AbstractConfigValue>();
-        for (AbstractConfigValue o : stack) {
-            newStack.add(o.relativized(prefix));
-        }
-        return new ConfigDelayedMerge(origin(), newStack);
-    }
-
     // static utility shared with ConfigDelayedMergeObject
     static boolean stackIgnoresFallbacks(List<AbstractConfigValue> stack) {
-        AbstractConfigValue last = stack.get(stack.size() - 1);
+        AbstractConfigValue last = stack.getLast();
         return last.ignoresFallbacks();
-    }
-
-    @Override
-    protected boolean ignoresFallbacks() {
-        return stackIgnoresFallbacks(stack);
-    }
-
-    @Override
-    protected AbstractConfigValue newCopy(ConfigOrigin newOrigin) {
-        return new ConfigDelayedMerge(newOrigin, stack);
-    }
-
-    @Override
-    protected final ConfigDelayedMerge mergedWithTheUnmergeable(Unmergeable fallback) {
-        return (ConfigDelayedMerge) mergedWithTheUnmergeable(stack, fallback);
-    }
-
-    @Override
-    protected final ConfigDelayedMerge mergedWithObject(AbstractConfigObject fallback) {
-        return (ConfigDelayedMerge) mergedWithObject(stack, fallback);
-    }
-
-    @Override
-    protected ConfigDelayedMerge mergedWithNonObject(AbstractConfigValue fallback) {
-        return (ConfigDelayedMerge) mergedWithNonObject(stack, fallback);
-    }
-
-    @Override
-    public Collection<AbstractConfigValue> unmergedValues() {
-        return stack;
-    }
-
-    @Override
-    protected boolean canEqual(Object other) {
-        return other instanceof ConfigDelayedMerge;
-    }
-
-    @Override
-    public boolean equals(Object other) {
-        // note that "origin" is deliberately NOT part of equality
-        if (other instanceof ConfigDelayedMerge) {
-            return canEqual(other)
-                    && (this.stack == ((ConfigDelayedMerge) other).stack || this.stack
-                            .equals(((ConfigDelayedMerge) other).stack));
-        } else {
-            return false;
-        }
-    }
-
-    @Override
-    public int hashCode() {
-        // note that "origin" is deliberately NOT part of equality
-        return stack.hashCode();
-    }
-
-    @Override
-    protected void render(StringBuilder sb, int indent, boolean atRoot, String atKey, ConfigRenderOptions options) {
-        render(stack, sb, indent, atRoot, atKey, options);
-    }
-
-    @Override
-    protected void render(StringBuilder sb, int indent, boolean atRoot, ConfigRenderOptions options) {
-        render(sb, indent, atRoot, null, options);
     }
 
     // static method also used by ConfigDelayedMergeObject.
     static void render(List<AbstractConfigValue> stack, StringBuilder sb, int indent, boolean atRoot, String atKey,
-            ConfigRenderOptions options) {
+                       ConfigRenderOptions options) {
         boolean commentMerge = options.getComments();
         if (commentMerge) {
-            sb.append("# unresolved merge of " + stack.size() + " values follows (\n");
+            sb.append("# unresolved merge of ").append(stack.size()).append(" values follows (\n");
             if (atKey == null) {
                 indent(sb, indent, options);
                 sb.append("# this unresolved merge will not be parseable because it's at the root of the object\n");
@@ -329,8 +211,7 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
             }
         }
 
-        List<AbstractConfigValue> reversed = new ArrayList<AbstractConfigValue>();
-        reversed.addAll(stack);
+        List<AbstractConfigValue> reversed = new ArrayList<>(stack);
         Collections.reverse(reversed);
 
         int i = 0;
@@ -338,10 +219,9 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
             if (commentMerge) {
                 indent(sb, indent, options);
                 if (atKey != null) {
-                    sb.append("#     unmerged value " + i + " for key "
-                            + ConfigImplUtil.renderJsonString(atKey) + " from ");
+                    sb.append("#     unmerged value ").append(i).append(" for key ").append(ConfigImplUtil.renderJsonString(atKey)).append(" from ");
                 } else {
-                    sb.append("#     unmerged value " + i + " from ");
+                    sb.append("#     unmerged value ").append(i).append(" from ");
                 }
                 i += 1;
                 sb.append(v.origin().description());
@@ -378,5 +258,123 @@ final class ConfigDelayedMerge extends AbstractConfigValue implements Unmergeabl
             indent(sb, indent, options);
             sb.append("# ) end of unresolved merge\n");
         }
+    }
+
+    @Override
+    public ConfigValueType valueType() {
+        throw new ConfigException.NotResolved(
+                "called valueType() on value with unresolved substitutions, need to Config#resolve() first, see API docs");
+    }
+
+    @Override
+    public Object unwrapped() {
+        throw new ConfigException.NotResolved(
+                "called unwrapped() on value with unresolved substitutions, need to Config#resolve() first, see API docs");
+    }
+
+    @Override
+    ResolveResult<? extends AbstractConfigValue> resolveSubstitutions(ResolveContext context, ResolveSource source)
+            throws NotPossibleToResolve {
+        SimpleConfigList nonRecursiveList = tryResolveSubstitutionsNonRecursiveOptimisticConfigList(stack, origin());
+        if (nonRecursiveList != null) {
+            return ResolveResult.make(context, nonRecursiveList);
+        }
+        return resolveSubstitutions(this, stack, context, source);
+    }
+
+    @Override
+    public AbstractConfigValue makeReplacement(ResolveContext context, int skipping) {
+        return ConfigDelayedMerge.makeReplacement(context, stack, skipping);
+    }
+
+    @Override
+    ResolveStatus resolveStatus() {
+        return ResolveStatus.UNRESOLVED;
+    }
+
+    @Override
+    public AbstractConfigValue replaceChild(AbstractConfigValue child, AbstractConfigValue replacement) {
+        List<AbstractConfigValue> newStack = replaceChildInList(stack, child, replacement);
+        if (newStack == null)
+            return null;
+        else
+            return new ConfigDelayedMerge(origin(), newStack);
+    }
+
+    @Override
+    public boolean hasDescendant(AbstractConfigValue descendant) {
+        return hasDescendantInList(stack, descendant);
+    }
+
+    @Override
+    ConfigDelayedMerge relativized(Path prefix) {
+        List<AbstractConfigValue> newStack = new ArrayList<>();
+        for (AbstractConfigValue o : stack) {
+            newStack.add(o.relativized(prefix));
+        }
+        return new ConfigDelayedMerge(origin(), newStack);
+    }
+
+    @Override
+    protected boolean ignoresFallbacks() {
+        return stackIgnoresFallbacks(stack);
+    }
+
+    @Override
+    protected AbstractConfigValue newCopy(ConfigOrigin newOrigin) {
+        return new ConfigDelayedMerge(newOrigin, stack);
+    }
+
+    @Override
+    protected ConfigDelayedMerge mergedWithTheUnmergeable(Unmergeable fallback) {
+        return (ConfigDelayedMerge) mergedWithTheUnmergeable(stack, fallback);
+    }
+
+    @Override
+    protected ConfigDelayedMerge mergedWithObject(AbstractConfigObject fallback) {
+        return (ConfigDelayedMerge) mergedWithObject(stack, fallback);
+    }
+
+    @Override
+    protected ConfigDelayedMerge mergedWithNonObject(AbstractConfigValue fallback) {
+        return (ConfigDelayedMerge) mergedWithNonObject(stack, fallback);
+    }
+
+    @Override
+    public Collection<AbstractConfigValue> unmergedValues() {
+        return stack;
+    }
+
+    @Override
+    protected boolean canEqual(Object other) {
+        return other instanceof ConfigDelayedMerge;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        // note that "origin" is deliberately NOT part of equality
+        if (other instanceof ConfigDelayedMerge) {
+            return canEqual(other)
+                    && (this.stack == ((ConfigDelayedMerge) other).stack || this.stack
+                    .equals(((ConfigDelayedMerge) other).stack));
+        } else {
+            return false;
+        }
+    }
+
+    @Override
+    public int hashCode() {
+        // note that "origin" is deliberately NOT part of equality
+        return stack.hashCode();
+    }
+
+    @Override
+    protected void render(StringBuilder sb, int indent, boolean atRoot, String atKey, ConfigRenderOptions options) {
+        render(stack, sb, indent, atRoot, atKey, options);
+    }
+
+    @Override
+    protected void render(StringBuilder sb, int indent, boolean atRoot, ConfigRenderOptions options) {
+        render(sb, indent, atRoot, null, options);
     }
 }
