@@ -1,29 +1,19 @@
 /**
- *   Copyright (C) 2011-2012 Typesafe Inc. <http://typesafe.com>
+ * Copyright (C) 2011-2012 Typesafe Inc. <http://typesafe.com>
  */
 package com.typesafe.config.impl;
 
+import com.typesafe.config.*;
+
 import java.io.File;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
-
-import com.typesafe.config.ConfigException;
-import com.typesafe.config.ConfigFactory;
-import com.typesafe.config.ConfigIncludeContext;
-import com.typesafe.config.ConfigIncluder;
-import com.typesafe.config.ConfigIncluderClasspath;
-import com.typesafe.config.ConfigIncluderFile;
-import com.typesafe.config.ConfigIncluderURL;
-import com.typesafe.config.ConfigObject;
-import com.typesafe.config.ConfigParseOptions;
-import com.typesafe.config.ConfigParseable;
-import com.typesafe.config.ConfigSyntax;
+import java.util.Objects;
 
 class SimpleIncluder implements FullIncluder {
 
-    private ConfigIncluder fallback;
+    private final ConfigIncluder fallback;
 
     SimpleIncluder(ConfigIncluder fallback) {
         this.fallback = fallback;
@@ -36,29 +26,15 @@ class SimpleIncluder implements FullIncluder {
         return options.setSyntax(null).setOriginDescription(null).setAllowMissing(true);
     }
 
-    // this is the heuristic includer
-    @Override
-    public ConfigObject include(final ConfigIncludeContext context, String name) {
-        ConfigObject obj = includeWithoutFallback(context, name);
-
-        // now use the fallback includer if any and merge
-        // its result.
-        if (fallback != null) {
-            return obj.withFallback(fallback.include(context, name));
-        } else {
-            return obj;
-        }
-    }
-
     // the heuristic includer in static form
     static ConfigObject includeWithoutFallback(final ConfigIncludeContext context, String name) {
         // the heuristic is valid URL then URL, else relative to including file;
         // relativeTo in a file falls back to classpath inside relativeTo().
 
-        URL url;
+        URI url;
         try {
-            url = new URL(name);
-        } catch (MalformedURLException e) {
+            url = new URI(name).toURL().toURI();
+        } catch (Exception e) {
             url = null;
         }
 
@@ -70,95 +46,18 @@ class SimpleIncluder implements FullIncluder {
         }
     }
 
-    @Override
-    public ConfigObject includeURL(ConfigIncludeContext context, URL url) {
-        ConfigObject obj = includeURLWithoutFallback(context, url);
-
-        // now use the fallback includer if any and merge
-        // its result.
-        if (fallback != null && fallback instanceof ConfigIncluderURL) {
-            return obj.withFallback(((ConfigIncluderURL) fallback).includeURL(context, url));
-        } else {
-            return obj;
-        }
-    }
-
-    static ConfigObject includeURLWithoutFallback(final ConfigIncludeContext context, URL url) {
-        return ConfigFactory.parseURL(url, context.parseOptions()).root();
-    }
-
-    @Override
-    public ConfigObject includeFile(ConfigIncludeContext context, File file) {
-        ConfigObject obj = includeFileWithoutFallback(context, file);
-
-        // now use the fallback includer if any and merge
-        // its result.
-        if (fallback != null && fallback instanceof ConfigIncluderFile) {
-            return obj.withFallback(((ConfigIncluderFile) fallback).includeFile(context, file));
-        } else {
-            return obj;
-        }
+    static ConfigObject includeURLWithoutFallback(final ConfigIncludeContext context, URI url) {
+        return ConfigFactory.parseURI(url, context.parseOptions()).root();
     }
 
     static ConfigObject includeFileWithoutFallback(final ConfigIncludeContext context, File file) {
         return ConfigFactory.parseFileAnySyntax(file, context.parseOptions()).root();
     }
 
-    @Override
-    public ConfigObject includeResources(ConfigIncludeContext context, String resource) {
-        ConfigObject obj = includeResourceWithoutFallback(context, resource);
-
-        // now use the fallback includer if any and merge
-        // its result.
-        if (fallback != null && fallback instanceof ConfigIncluderClasspath) {
-            return obj.withFallback(((ConfigIncluderClasspath) fallback).includeResources(context,
-                    resource));
-        } else {
-            return obj;
-        }
-    }
-
     static ConfigObject includeResourceWithoutFallback(final ConfigIncludeContext context,
-            String resource) {
+                                                       String resource) {
         return ConfigFactory.parseResourcesAnySyntax(resource, context.parseOptions()).root();
     }
-
-    @Override
-    public ConfigIncluder withFallback(ConfigIncluder fallback) {
-        if (this == fallback) {
-            throw new ConfigException.BugOrBroken("trying to create includer cycle");
-        } else if (this.fallback == fallback) {
-            return this;
-        } else if (this.fallback != null) {
-            return new SimpleIncluder(this.fallback.withFallback(fallback));
-        } else {
-            return new SimpleIncluder(fallback);
-        }
-    }
-
-    interface NameSource {
-        ConfigParseable nameToParseable(String name, ConfigParseOptions parseOptions);
-    }
-
-    static private class RelativeNameSource implements NameSource {
-        final private ConfigIncludeContext context;
-
-        RelativeNameSource(ConfigIncludeContext context) {
-            this.context = context;
-        }
-
-        @Override
-        public ConfigParseable nameToParseable(String name, ConfigParseOptions options) {
-            ConfigParseable p = context.relativeTo(name);
-            if (p == null) {
-                // avoid returning null
-                return Parseable
-                        .newNotFound(name, "include was not found: '" + name + "'", options);
-            } else {
-                return p;
-            }
-        }
-    };
 
     // this function is a little tricky because there are three places we're
     // trying to use it; for 'include "basename"' in a .conf file, for
@@ -175,7 +74,7 @@ class SimpleIncluder implements FullIncluder {
             ConfigParseable jsonHandle = source.nameToParseable(name + ".json", options);
             ConfigParseable propsHandle = source.nameToParseable(name + ".properties", options);
             boolean gotSomething = false;
-            List<ConfigException.IO> fails = new ArrayList<ConfigException.IO>();
+            List<ConfigException.IO> fails = new ArrayList<>();
 
             ConfigSyntax syntax = options.getSyntax();
 
@@ -233,13 +132,13 @@ class SimpleIncluder implements FullIncluder {
                     }
                     sb.setLength(sb.length() - 2);
                     throw new ConfigException.IO(SimpleConfigOrigin.newSimple(name), sb.toString(),
-                            fails.get(0));
+                            fails.getFirst());
                 }
             } else if (!gotSomething) {
                 if (ConfigImpl.traceLoadsEnabled()) {
                     ConfigImpl.trace("Did not find '" + name
                             + "' with any extension (.conf, .json, .properties); but '" + name
-                                    + "' is allowed to be missing. Exceptions from load attempts should have been logged above.");
+                            + "' is allowed to be missing. Exceptions from load attempts should have been logged above.");
                 }
             }
         }
@@ -247,15 +146,99 @@ class SimpleIncluder implements FullIncluder {
         return obj;
     }
 
+    static FullIncluder makeFull(ConfigIncluder includer) {
+        if (includer instanceof FullIncluder)
+            return (FullIncluder) includer;
+        else
+            return new Proxy(includer);
+    }
+
+    // this is the heuristic includer
+    @Override
+    public ConfigObject include(final ConfigIncludeContext context, String name) {
+        ConfigObject obj = includeWithoutFallback(context, name);
+
+        // now use the fallback includer if any and merge
+        // its result.
+        if (fallback != null) {
+            return obj.withFallback(fallback.include(context, name));
+        } else {
+            return obj;
+        }
+    }
+
+    @Override
+    public ConfigObject includeURI(ConfigIncludeContext context, URI url) {
+        ConfigObject obj = includeURLWithoutFallback(context, url);
+
+        // now use the fallback includer if any and merge
+        // its result.
+        if (fallback != null && fallback instanceof ConfigIncluderURL) {
+            return obj.withFallback(((ConfigIncluderURL) fallback).includeURI(context, url));
+        } else {
+            return obj;
+        }
+    }
+
+    @Override
+    public ConfigObject includeFile(ConfigIncludeContext context, File file) {
+        ConfigObject obj = includeFileWithoutFallback(context, file);
+
+        // now use the fallback includer if any and merge
+        // its result.
+        if (fallback != null && fallback instanceof ConfigIncluderFile) {
+            return obj.withFallback(((ConfigIncluderFile) fallback).includeFile(context, file));
+        } else {
+            return obj;
+        }
+    }
+
+    @Override
+    public ConfigObject includeResources(ConfigIncludeContext context, String resource) {
+        ConfigObject obj = includeResourceWithoutFallback(context, resource);
+
+        // now use the fallback includer if any and merge
+        // its result.
+        if (fallback != null && fallback instanceof ConfigIncluderClasspath) {
+            return obj.withFallback(((ConfigIncluderClasspath) fallback).includeResources(context,
+                    resource));
+        } else {
+            return obj;
+        }
+    }
+
+    @Override
+    public ConfigIncluder withFallback(ConfigIncluder fallback) {
+        if (this == fallback) {
+            throw new ConfigException.BugOrBroken("trying to create includer cycle");
+        } else if (this.fallback == fallback) {
+            return this;
+        } else if (this.fallback != null) {
+            return new SimpleIncluder(this.fallback.withFallback(fallback));
+        } else {
+            return new SimpleIncluder(fallback);
+        }
+    }
+
+    interface NameSource {
+        ConfigParseable nameToParseable(String name, ConfigParseOptions parseOptions);
+    }
+
+    private record RelativeNameSource(ConfigIncludeContext context) implements NameSource {
+
+        @Override
+        public ConfigParseable nameToParseable(String name, ConfigParseOptions options) {
+            ConfigParseable p = context.relativeTo(name);
+            // avoid returning null
+            return Objects.requireNonNullElseGet(p, () -> Parseable
+                    .newNotFound(name, "include was not found: '" + name + "'", options));
+        }
+    }
+
     // the Proxy is a proxy for an application-provided includer that uses our
     // default implementations when the application-provided includer doesn't
     // have an implementation.
-    static private class Proxy implements FullIncluder {
-        final ConfigIncluder delegate;
-
-        Proxy(ConfigIncluder delegate) {
-            this.delegate = delegate;
-        }
+    private record Proxy(ConfigIncluder delegate) implements FullIncluder {
 
         @Override
         public ConfigIncluder withFallback(ConfigIncluder fallback) {
@@ -277,9 +260,9 @@ class SimpleIncluder implements FullIncluder {
         }
 
         @Override
-        public ConfigObject includeURL(ConfigIncludeContext context, URL what) {
+        public ConfigObject includeURI(ConfigIncludeContext context, URI what) {
             if (delegate instanceof ConfigIncluderURL)
-                return ((ConfigIncluderURL) delegate).includeURL(context, what);
+                return ((ConfigIncluderURL) delegate).includeURI(context, what);
             else
                 return includeURLWithoutFallback(context, what);
         }
@@ -291,12 +274,5 @@ class SimpleIncluder implements FullIncluder {
             else
                 return includeFileWithoutFallback(context, what);
         }
-    }
-
-    static FullIncluder makeFull(ConfigIncluder includer) {
-        if (includer instanceof FullIncluder)
-            return (FullIncluder) includer;
-        else
-            return new Proxy(includer);
     }
 }
